Fix deployment configuration for Digital Ocean

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "description": "WWE-themed betting club application",
   "main": "index.js",
   "scripts": {
-    "build": "cd temp-app && npm run build",
-    "start": "cd temp-app && npm start"
+    "build": "cd temp-app && npm install && npm run build",
+    "start": "cd temp-app && npm install && npm start"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "repository": {
     "type": "git",
