--- a/temp-app/package.json
+++ b/temp-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
+    "express": "^4.18.2",
     "lucide-react": "^0.482.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod-build": "node build-prod.js",
+    "serve": "node server.js"
   },
   "eslintConfig": {
     "extends": [
