--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -5,8 +5,8 @@ services:
     branch: master
     deploy_on_push: true
     repo: jab1986/suoer-cool-betting-club
-  build_command: cd temp-app && npm install && npm run build
-  run_command: cd temp-app && npx serve -s build
+  build_command: npm run build
+  run_command: npm start
   http_port: 8080
   instance_size_slug: basic-xs
   routes:
