--- a/package.json
+++ b/package.json
@@ -5,11 +5,51 @@
   "description": "WWE-themed betting club application",
   "main": "index.js",
   "scripts": {
-    "build": "cd temp-app && npm install && npm run prod-build",
-    "start": "cd temp-app && npm run serve"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "prod-build": "node build-prod.js",
+    "serve": "node server.js"
   },
   "engines": {
     "node": "18.x"
+  },
+  "dependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.3",
+    "express": "^4.18.2",
+    "lucide-react": "^0.482.0",
+    "postcss": "^8.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
+    "styled-components": "^6.1.15",
+    "web-vitals": "^2.1.4",
+    "tailwindcss": "^3.3.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "repository": {
     "type": "git",
@@ -26,4 +66,4 @@
     "url": "https://github.com/jab1986/suoer-cool-betting-club/issues"
   },
   "homepage": "https://github.com/jab1986/suoer-cool-betting-club#readme"
-} 
+}
